--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
         "@mui/icons-material": "^5.10.9",
         "@mui/material": "^5.10.12",
         "@react-buddy/ide-toolbox": "^2.2.1",
+        "@react-buddy/palette-mui": "^1.2.2",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
-        "firebase": "^9.13.0",
+        "firebase": "^8.10.1",
         "react": "^18.2.0",
         "react-currency-format": "^1.1.0",
         "react-dom": "^18.2.0",
@@ -20,7 +21,7 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "set PORT=4200 && react-scripts start ",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
@@ -44,6 +45,7 @@
         ]
     },
     "devDependencies": {
+        "babel-eslint": "^10.1.0",
         "prettier": "^2.7.1"
     }
 }
