--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "react-dom": "^18.2.0",
         "react-router-dom": "^5.3.4",
         "react-scripts": "5.0.1",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "firebase-tools": "^10.9.2"
     },
     "scripts": {
         "start": "set PORT=4200 && react-scripts start ",
@@ -45,7 +46,10 @@
         ]
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.13",
         "babel-eslint": "^10.1.0",
-        "prettier": "^2.7.1"
+        "postcss": "^8.4.18",
+        "prettier": "^2.7.1",
+        "tailwindcss": "^3.2.2"
     }
 }
