--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
         "@mui/material": "^5.10.12",
         "@react-buddy/ide-toolbox": "^2.2.1",
         "@react-buddy/palette-mui": "^1.2.2",
+        "@stripe/react-stripe-js": "^1.14.2",
+        "@stripe/stripe-js": "^1.42.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "axios": "^1.1.3",
         "firebase": "^8.10.1",
+        "firebase-tools": "^10.9.2",
         "react": "^18.2.0",
         "react-currency-format": "^1.1.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^5.3.4",
         "react-scripts": "5.0.1",
-        "web-vitals": "^2.1.4",
-        "firebase-tools": "^10.9.2"
+        "web-vitals": "^2.1.4"
     },
     "scripts": {
         "start": "set PORT=4200 && react-scripts start ",
@@ -46,10 +49,7 @@
         ]
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.13",
         "babel-eslint": "^10.1.0",
-        "postcss": "^8.4.18",
-        "prettier": "^2.7.1",
-        "tailwindcss": "^3.2.2"
+        "prettier": "^2.7.1"
     }
 }
