--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "axios": "^1.1.3",
         "firebase": "^8.10.1",
         "firebase-tools": "^10.9.2",
+        "moment": "^2.29.4",
         "react": "^18.2.0",
         "react-currency-format": "^1.1.0",
         "react-dom": "^18.2.0",
